--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <!-- h1 é título -->
     <h1>Curso de CSS</h1>
+    <!-- a serve para navegar entre páginas -->
+    <a href="public/cores.html">Cores</a>
 </body>
 </html>
