Estilizar somente links pertencetes a navbar

--- a/public/cores.html
+++ b/public/cores.html
@@ -18,12 +18,15 @@
 </head>
 
 <body>
-    <a href="../index.html">Home</a>
-
+    <div>
+        <!-- Adicionado página com exemplos de cores -->
+        <a href="../index.html">Home</a>
+        <a href="https://colorhunt.co" target="_blank">Paleta de Cores</a>
+        <a href="https://www.w3schools.com/W3CSS/w3css_colors.asp" target="_blank">Cores</a>
+    </div>
+        
     <h1>Cores</h1>
 
-    <a href="https://colorhunt.co" target="_blank">Paleta de Cores</a>
-    <a href="https://www.w3schools.com/W3CSS/w3css_colors.asp" target="_blank">Cores</a>
 
     <h2>Cor utilizando RGB</h2>
     <p>Podemos definir a cor do elemento utilizando o RGB, exemplo: <code>color: rgb(129, 190, 255)</code></p>
