Adicionado icone do sistema

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Curso de CSS</h1>
     <!-- a serve para navegar entre páginas -->
     <a href="public/cores.html">Cores</a>
+    <a href="public/seletores.html">Seletores</a>
 </body>
 </html>
