--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- a serve para navegar entre páginas -->
     <a href="public/cores.html">Cores</a>
     <a href="public/seletores.html">Seletores</a>
+    <a href="public/exercicio.html">Exercício</a>
 </body>
 </html>
 
