--- a/public/exercicio.html
+++ b/public/exercicio.html
@@ -38,7 +38,7 @@
         <img src="../assets/images/image.png" alt="">
     </div>
 
-    <code>body => background: linear-gradient(180deg, #eefaf7, #ffe5f2) </code>
+    <code>body => background: linear-gradient(180deg, #eefaf7, #d4f4ff) </code>
     <code>imagem sunday direita => background: radial-gradient(circle at 20% 20%, #fff, #ffd1dc 40%, #ffb6c1 70%);</code>
 
     <div class="emojis">
