--- a/public/exercicio.html
+++ b/public/exercicio.html
@@ -39,7 +39,7 @@
     </div>
 
     <code>body => background: linear-gradient(180deg, #eefaf7, #d4f4ff) </code>
-    <code>imagem sunday direita => background: radial-gradient(circle at 20% 20%, #fff, #ffd1dc 40%, #ffb6c1 70%);</code>
+    <code>imagem sunday direita => background: radial-gradient(circle at 20% 20%, #ffffff, #c4f3e6 40%, #9be7ff 75%);</code>
 
     <div class="emojis">
         😋🍨🍧🍫🍓🥭🥥🍋🍮🍪🍵
